fixed carousel spacing again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,10 @@
     overflow: hidden;
 }
 
+#Landing-Splash{
+    margin-top:30px;
+}
+
 #Articles .title,
 #About .title,
 #Timeline .title,
@@ -181,7 +185,6 @@ html, body{
 hr{
     width: 30%;
 }
-
 
 ::-webkit-scrollbar{
     width:10px;
